--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.11",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "yup": "^0.32.8"
   }
 }
